fix: video infinite fetching bug on iOS Safari

--- a/assets/scss/pages/_404.scss
+++ b/assets/scss/pages/_404.scss
@@ -54,9 +54,4 @@
             color: #fff;
         }
     }
-    @media only screen and (max-device-width: 1024px) {
-        #bgvid {
-            display: none;
-        }
-    }
 }
