--- a/assets/scss/pages/_home-footage.scss
+++ b/assets/scss/pages/_home-footage.scss
@@ -85,9 +85,4 @@
         object-fit: cover;
         z-index: 2;
     }
-    @media only screen and (max-device-width: 1024px) {
-        #bgvid {
-            display: none;
-        }
-    }
 }
